--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -3,22 +3,19 @@
   package:
     name: postfix
     state: present
+    
+- name: Var thing
+  set_fact: 
+    postfix_config: "{{ postfix_config | combine ({item.key : item.value}) }}"
+  with_items:
+    - { 'key': inet_interfaces, 'value': "{{ postfix_inet_interfaces }}" }
+    - { 'key': inet_protocols, 'value': "{{ postfix_inet_protocols }}"}
 
 - name: Update Postfix configuration.
   lineinfile:
     dest: "{{ postfix_config_file }}"
-    line: "{{ item.name }} = {{ item.value }}"
-    regexp: "^{{ item.name }} ="
+    line: "{{ item.key }} = {{ item.value }}"
+    regexp: "^{{ item.key }} ="
     mode: 0644
-  with_items:
-    - name: inet_interfaces
-      value: "{{ postfix_inet_interfaces }}"
-    - name: inet_protocols
-      value: "{{ postfix_inet_protocols }}"
+  loop: "{{ lookup('dict', postfix_config) }}"
   notify: restart postfix
-
-- name: Ensure postfix is started and enabled at boot.
-  service:
-    name: postfix
-    state: "{{ postfix_service_state }}"
-    enabled: "{{ postfix_service_enabled }}"
